--- a/playbook-install.yml
+++ b/playbook-install.yml
@@ -146,7 +146,7 @@
     shell: |
       source .venv/bin/activate
       export TRYTONPASSFILE=/home/pacs/{{pac}}/users/{{user}}/.initialpwd
-      echo "{{password}}" > $TRYTONPASSFILE
+      echo "{{initialadminpassword}}" > $TRYTONPASSFILE
       python ./.venv/bin/trytond-admin -c ../etc/tryton.ini -d {{pac}}_{{user}} --password --email "{{admin_email}}" --all
       rm -f $TRYTONPASSFILE
       touch "/home/pacs/{{pac}}/users/{{user}}/.ansible_instance_initialised"
