fix activation, and fix ansible instance name

--- a/inventory-template.yml
+++ b/inventory-template.yml
@@ -1,6 +1,6 @@
 tryton:
   hosts:
-    {{pac}}-{{user}}:
+    {{pac}}-{{username}}:
       ansible_ssh_host: {{pac}}.hostsharing.net
       ansible_ssh_user: {{pac}}
       pac: {{pac}}
