install client from tarball

--- a/inventory-template.yml
+++ b/inventory-template.yml
@@ -15,9 +15,10 @@ tryton:
       SaasInstanceStatus: {{SaasInstanceStatus}}
 
       # see https://nodejs.org/en/about/releases/
-      noderelease: 16
-      # see https://nodejs.org/download/release/latest-v16.x/
-      nodeversion: v16.14.2
+      noderelease: 18
+      # see https://nodejs.org/download/release/latest-v18.x/
+      nodeversion: v18.15.0
 
-      # see branches: https://github.com/tryton/sao/branches
-      trytonversion: "6.4"
+      # see releases: https://downloads.tryton.org
+      trytonbranch: "6.4"
+      trytonversion: "6.4.9"
