--- a/tasks/hs_nodejs.yml
+++ b/tasks/hs_nodejs.yml
@@ -28,8 +28,8 @@
   become_user: "{{pac}}-{{user}}"
   shell: |
       . ~/.profile
-      nvm install {{noderelease}}
-      nvm alias default {{noderelease}}
+      nvm install {{noderelease}} || exit -1
+      nvm alias default {{noderelease}} || exit -1
   args:
       executable: /bin/bash
       chdir: "/home/pacs/{{pac}}/users/{{user}}/"
