--- a/inventory-template.yml
+++ b/inventory-template.yml
@@ -23,4 +23,5 @@ tryton:
       # see releases: https://downloads.tryton.org
       trytonbranch: "6.4"
       trytonversion: "6.4.14"
+      tryton_sao_version: "6.4.13"
       trytond_sale_version: "6.4.6"
